# SamsT4vless

./: .gitignore  Cargo.toml  README.md  build-share-client.bat  package-client.ps1  start-tun.bat  start-tun.ps1
crates/client/: Cargo.toml
crates/client/src/: main.rs  tun_mode.rs
crates/core/: Cargo.toml
crates/core/src/: address.rs  crypto.rs  lib.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/superpowers/specs/: 2026-07-02-cdn-panel-xhttp-design.md  2026-07-02-cloudflare-xhttp-design.md  2026-07-02-portable-gui-client-design.md  2026-07-02-public-readme-redaction-design.md  2026-07-02-reality-single-exe-client-design.md  2026-07-02-responsive-button-design.md
