[package]
name = "ss-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ss-server"
path = "src/main.rs"

[dependencies]
ss-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.8", features = ["async"] }
